--- a/templates/form.html
+++ b/templates/form.html
@@ -1,16 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    <div class="col-lg-6 ">
-        <form id="formulario" method="post" action="">{% csrf_token %}
-            {{ form.as_p }}
+{% extends 'base.html' %}
+{% block contenido %}
+    {# Load the tag library #}
+{% load bootstrap3 %}
 
-            <button type="submit" class="btn btn-default">Confirmar</button>
-        </form>
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+    <div class="row">
+        <div class="col-sm-12 ">
+            <h1>Inscripcion</h1>
+
+        </div>
     </div>
-</body>
-</html>
+    <div class="row">
+        <div class="col-sm-12 ">
+            {% bootstrap_messages %}
+            <form id="formulario" method="post" action="" class="form">{% csrf_token %}
+                {% bootstrap_form form layout='horizontal' %}
+                {% buttons %}
+                <button type="submit" class="btn btn-primary">
+                    {% bootstrap_icon "save" %} Guardar
+                </button>
+                {% endbuttons %}
+            </form>
+        </div>
+    </div>
+{% endblock %}
