--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
 
 </head>
-<body>
+<body style="padding-top: 50px;">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
