--- a/templates/inscriptos.html
+++ b/templates/inscriptos.html
@@ -13,6 +13,7 @@
     <div class="row">
         <div class="col-sm-12 ">
             <div>
+                <a class="btn btn-default" href="{% url 'inscripcion.views.descargar_csv' actividad.id %}">Descargar csv</a>
                 <table class="table">
                     <thead>
                     <tr>
