--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="#">MP</a>
+                </button>
+                <!-- <a class="navbar-brand" href="/">MP</a> -->
+                <a href="/" class="navbar-brand">
+                    <img src="http://www.movimientoperegrino.org/img/logos/logo-mp-01.png"
+                         style="max-width:50px; margin-top: -7px;">
+                </a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
