--- a/templates/admin/inscriptos.html
+++ b/templates/admin/inscriptos.html
@@ -13,8 +13,11 @@
     <div class="row">
         <div class="col-sm-12 ">
             <div>
+                <p><b>Url para el contacto: </b><a href="{{ url_contacto }}">{{ url_contacto }}</a></p>
+
                 <a class="btn btn-default" href="{{ url_csv }}">Descargar csv</a>
-                <table class="table">
+                <div class="table-responsive">
+                    <table class="table">
                     <thead>
                     <tr>
                         <th>Puesto</th>
@@ -45,6 +48,8 @@
                     {% endfor %}
                     </tbody>
                 </table>
+                </div>
+                <a href="{% url 'inscripcion.views.lista_actividades' %}" class="btn btn-default">Volver</a>
             </div>
         </div>
     </div>
