--- a/templates/formextra.html
+++ b/templates/formextra.html
@@ -8,11 +8,15 @@
 {% bootstrap_messages %}
     <div class="row">
         <div class="col-sm-12 ">
-            <h1>Inscripcion</h1>
+            <h2>Datos extra de la inscripción</h2>
+            <div class="alert alert-success">
+                ATENCION: Usted YA ESTA INSCRIPTO, complete TRANQUILAMENTE el resto de sus datos.
+            </div>
             <div class="well">
                     <p><b>Nombre:</b> {{ inscripto.nombre }}</p>
                     <p><b>Apellido:</b> {{ inscripto.apellido }}</p>
                     <p><b>Cedula:</b> {{ inscripto.cedula }}</p>
+                    <p><b>Celular:</b> {{ inscripto.celular }}</p>
                     <p><b>Correo:</b> {{ inscripto.mail }}</p>
             </div>
         </div>
