--- a/templates/admin/inscriptos.html
+++ b/templates/admin/inscriptos.html
@@ -17,7 +17,7 @@
 
                 <a class="btn btn-default" href="{{ url_csv }}">Descargar csv</a>
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-striped table-condensed">
                     <thead>
                     <tr>
                         <th>Puesto</th>
