--- a/templates/inscriptos.html
+++ b/templates/inscriptos.html
@@ -14,7 +14,8 @@
         <div class="col-sm-12 ">
             <div>
                 <a class="btn btn-default" href="{{ url_csv }}">Descargar csv</a>
-                <table class="table">
+                <div class="table-responsive">
+                    <table class="table table-striped table-condensed">
                     <thead>
                     <tr>
                         <th>Puesto</th>
@@ -45,6 +46,7 @@
                     {% endfor %}
                     </tbody>
                 </table>
+                </div>
             </div>
         </div>
     </div>
