--- a/templates/admin/actividad_list.html
+++ b/templates/admin/actividad_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block titulo %}Movimiento Peregrino{% endblock %}
 {% block navbar %}
+    <li><a href="/admin">Admin</a></li>
+    <li><a href="/fobi">Fobi</a></li>
     <li><a href="/logout">Cerrar sesion</a></li>
 {% endblock %}
 {% block contenido %}
