--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,13 @@
     <title>{% block titulo %}{% endblock %}</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "styles.css" %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
 
 </head>
-<body style="padding-top: 50px;">
+<body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -28,10 +28,11 @@
                     <img src="http://www.movimientoperegrino.org/img/logos/logo-mp-01.png"
                          style="max-width:50px; margin-top: -7px;">
                 </a>
+                <a href="#" class="navbar-brand">Inscripciones - Movimiento Peregrino</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Inscripciones - Movimiento Peregrino</a></li>
+
                     {% block navbar %}{% endblock %}
 
                 </ul>
@@ -45,9 +46,9 @@
 
     </div>
 
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
