--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 </button>
                 <!-- <a class="navbar-brand" href="/">MP</a> -->
                 <a href="/" class="navbar-brand">
-                    <img src="http://www.movimientoperegrino.org/img/logos/logo-mp-01.png"
+                    <img src="{% static 'img/logo-mp.png' %}"
                          style="max-width:50px; margin-top: -7px;">
                 </a>
                 <a href="#" class="navbar-brand">Inscripciones - Movimiento Peregrino</a>
