alert dismissable. boton oculto de login

--- a/templates/error.html
+++ b/templates/error.html
@@ -6,5 +6,8 @@
 
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
-    <div class="alert alert-danger">{{ mensaje }}</div>
+    <div class="alert alert-danger alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <b>Error: </b>{{ mensaje }}
+    </div>
 {% endblock %}
