--- a/templates/suceso.html
+++ b/templates/suceso.html
@@ -6,5 +6,8 @@
 
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
-    <div class="alert alert-success">{{ mensaje }}</div>
+    <div class="alert alert-success alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      {{ mensaje }}
+    </div>
 {% endblock %}
