--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-
+                    <li><a href="/login"></a></li>
                     {% block navbar %}{% endblock %}
 
                 </ul>
