--- a/templates/form.html
+++ b/templates/form.html
@@ -23,6 +23,22 @@
                 </button>
                 {% endbuttons %}
             </form>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped" id="bar"
+                   role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                <span class="sr-only">45% Complete</span>
+              </div>
+            </div>
         </div>
     </div>
+{% endblock %}
+{% block scripts %}
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#save').click(function(){
+                $('#bar').addClass('active').attr('aria-valuenow', '99%').css('width', '99%');
+
+            })
+        });
+    </script>
 {% endblock %}
