--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <img src="{% static 'img/logo-mp.png' %}"
                          style="max-width:50px; margin-top: -7px;">
                 </a>
-                <a href="#" class="navbar-brand">Inscripciones - Movimiento Peregrino</a>
+                <a href="#" class="navbar-brand">Inscripciones - MP</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
