--- a/templates/inscriptos.html
+++ b/templates/inscriptos.html
@@ -24,6 +24,7 @@
                         <th>CI</th>
                         <th>Telefono</th>
                         <th>Mail</th>
+                        <th>Fecha de inscripción</th>
 
                         {% for dato in cabecera %}
                             <th>{{ dato }}</th>
@@ -39,6 +40,7 @@
                             <td>{{ inscripto.cedula }}</td>
                             <td>{{ inscripto.celular }}</td>
                             <td>{{ inscripto.mail }}</td>
+                            <td>{{ inscripto.fechaInscripcion }}</td>
                             {% if inscripto.datos == None %}
                                 {% for dato in cabecera %}
                                     <td>None</td>
