--- a/templates/formextra.html
+++ b/templates/formextra.html
@@ -9,8 +9,8 @@
     <div class="row">
         <div class="col-sm-12 ">
             <h2>Datos extra de la inscripción</h2>
-            <div class="alert alert-success">
-                ATENCION: Usted YA ESTA INSCRIPTO, complete TRANQUILAMENTE el resto de sus datos.
+            <div class="alert alert-success" style="font-size: 20px;">
+                <b>Inscripción exitosa</b>, ahora completá los siguientes datos <b>sin apuro</b>.
             </div>
             <div class="well">
                     <p><b>Nombre:</b> {{ inscripto.nombre }}</p>
