--- a/templates/admin/actividad_list.html
+++ b/templates/admin/actividad_list.html
@@ -20,7 +20,7 @@
     {% for actividad in lista_actividades %}
         <li class="list-group-item">
             <h4>{{ actividad.tipo }}: {{ actividad.nombre }}</h4>
-            <a href="{% url 'inscripcion.views.inscriptos_actividad' actividad.id %}" class="btn btn-info">Inscriptos</a>
+            <a href="{% url 'lista' actividad.id %}" class="btn btn-info">Inscriptos</a>
             <a class="btn btn-info" href="/actividades/{{ actividad.id }}/editar">Editar actividad</a>
             <a class="btn btn-danger" href="/actividades/{{ actividad.id }}/eliminar">Eliminar actividad</a>
         </li>
