--- a/templates/admin/form.html
+++ b/templates/admin/form.html
@@ -21,7 +21,7 @@
                     <button type="submit" class="btn btn-primary">
                         {% bootstrap_icon "floppy-disk" %} Guardar
                     </button>
-                    <a href="{% url 'inscripcion.views.lista_actividades' %}" class="btn btn-default">Volver</a>
+                    <a href="{% url 'actividades' %}" class="btn btn-default">Volver</a>
                 {% endbuttons %}
             </form>
         </div>
