--- a/templates/inscripcion/actividad_list.html
+++ b/templates/inscripcion/actividad_list.html
@@ -42,7 +42,7 @@
                                          <dt>Requisitos:</dt>
                                         <dd>{{ i.requisitos }}</dd>
                                     </dl>
-                                    <a href="{% url 'inscripcion.views.inscripcion_actividad' i.id %}" class="btn btn-default">Inscribirse</a>
+                                    <a href="{% url 'actividad' i.id %}" class="btn btn-default">Inscribirse</a>
                                 {% endif %}
                         </li>
 
