--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block titulo %}{% endblock %}</title>
 
     <!-- Latest compiled and minified CSS -->
-    {% load staticfiles %}
+    {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
