--- a/templates/form.html
+++ b/templates/form.html
@@ -8,7 +8,7 @@
 {% bootstrap_messages %}
     <div class="row">
         <div class="col-sm-12 ">
-            <h1>Inscripción</h1>
+            <h3>Inscripción a {{ nombre_actividad }}</h3>
 
         </div>
     </div>
